# MarkOS_emulator_app

./: CMakeLists.txt  README.md
src/: Emulator.cpp  EmulatorEnvironment.cpp  EmulatorEnvironment.h
src/client/: CommandManager.cpp  CommandManager.h  EmulatorClient.cpp
